force-app/main/default/objects/Program__c/fields/Brand_VOC__c.field-meta.xml
<CustomField>
    <fullName>Brand_VOC__c</fullName>
    <label>Brand VOC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>