force-app/main/default/objects/Program__c/fields/BrandVOC_Neutral__c.field-meta.xml
<CustomField>
    <fullName>BrandVOC_Neutral__c</fullName>
    <label>BrandVOC Neutral</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>