force-app/main/default/objects/Program__c/fields/Has_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Has_Pay_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Pay Rate</label>
    <type>Checkbox</type>
</CustomField>