force-app/main/default/objects/Program__c/fields/Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate__c</fullName>
    <label>Pay Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat rate</fullName>
            </value>
            <value>
                <fullName>Gift Cart</fullName>
            </value>
            <value>
                <fullName>Other fill in text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>