force-app/main/default/objects/Program__c/fields/Pay_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate_Amount__c</fullName>
    <label>Pay Rate Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>