force-app/main/default/objects/Program__c/fields/Sun_Rise_Date__c.field-meta.xml
<CustomField>
    <fullName>Sun_Rise_Date__c</fullName>
    <label>Sun Rise Date</label>
    <type>Date</type>
</CustomField>