force-app/main/default/objects/Program__c/fields/Sun_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Sun_Set_Date__c</fullName>
    <label>Sun Set Date</label>
    <type>Date</type>
</CustomField>