force-app/main/default/objects/Program__c/fields/total_Flat_Rate__c.field-meta.xml
<CustomField>
    <fullName>total_Flat_Rate__c</fullName>
    <label>total Flat Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>