force-app/main/default/objects/Program__c/fields/total_Gift_Cart__c.field-meta.xml
<CustomField>
    <fullName>total_Gift_Cart__c</fullName>
    <label>total Gift Cart</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>