force-app/main/default/objects/Program__c/fields/Total_Other_fill_in_text__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_fill_in_text__c</fullName>
    <label>Total Other fill in text</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>