force-app/main/default/objects/Program__c/recordTypes/Amazon_Influencer_Program.recordType-meta.xml
<RecordType>
    <fullName>Amazon_Influencer_Program</fullName>
    <active>true</active>
    <label>Amazon Influencer Program</label>
</RecordType>