force-app/main/default/objects/Program__c/recordTypes/Amazon_Live.recordType-meta.xml
<RecordType>
    <fullName>Amazon_Live</fullName>
    <active>true</active>
    <label>Amazon Live</label>
</RecordType>