force-app/main/default/objects/Program__c/recordTypes/Beauty_Influencer_Program.recordType-meta.xml
<RecordType>
    <fullName>Beauty_Influencer_Program</fullName>
    <active>true</active>
    <label>Beauty Influencer Program</label>
</RecordType>