force-app/main/default/objects/Program__c/recordTypes/Fashion_Influencer_Program.recordType-meta.xml
<RecordType>
    <fullName>Fashion_Influencer_Program</fullName>
    <active>true</active>
    <label>Fashion Influencer Program</label>
</RecordType>