force-app/main/default/objects/Program__c/recordTypes/FounditonAmazon.recordType-meta.xml
<RecordType>
    <fullName>FounditonAmazon</fullName>
    <active>true</active>
    <label>FounditonAmazon</label>
</RecordType>