force-app/main/default/objects/Program__c/recordTypes/Home_Influencer_Program.recordType-meta.xml
<RecordType>
    <fullName>Home_Influencer_Program</fullName>
    <active>true</active>
    <label>Home Influencer Program</label>
</RecordType>