force-app/main/default/objects/Program__c/recordTypes/Young_Customer_Associates.recordType-meta.xml
<RecordType>
    <fullName>Young_Customer_Associates</fullName>
    <active>true</active>
    <label>Young Customer Associates</label>
</RecordType>